[package]
name = "network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["net", "macros", "rt-multi-thread", "io-util", "test-util"] } #
tokio-io = { version = "0.1.13" }
futures = "0.3.28"

bytes = "1.4.0"
bincode = "1.3.3"

serde = { version = "1.0.160", features = ["derive"] }
derive_more = "0.99.17"

errors = { path = "../errors"}
state = { path = "../state" }