[package]
name = "peer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28.0", features = ["net", "macros", "rt-multi-thread"] } #
tokio-io = "0.1"
futures = "0.3.28"

rand = "0.8.5"

blake2 = "0.10.6"
ursa = "0.3.7"

chrono = "0.4.26"

bytes = "1.4.0"
bincode = "1.3.3"

serde = { version = "1.0.160", features = ["derive"] }

state = { path = "../state" }
network = { path = "../network_protocol" }
errors = { path = "../errors"}
crypto = { path = "../crypto"}
utils = { path = "../utils"}
