[package]
name = "state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
derive_more = "0.99.17"
tightness = "1.0.1"

serde = { version = "1.0.160", features = ["derive"] }
bincode = "1.3.3"

crypto = { path = "../crypto"}
utils = { path = "../utils"}
errors = { path = "../errors"}